# particle_system

./: CMakeLists.txt  Makefile  README.md  TODO  TODO.txt  cl_gl.h
include/: cl.hpp  cl_gl.h
libs/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/CMake/: CMakeCache.txt
libs/glfw/examples/: Makefile  cmake_install.cmake  offscreen
libs/glfw/examples/boing.app/Contents/MacOS/: boing
libs/glfw/examples/gears.app/Contents/MacOS/: gears
libs/glfw/examples/heightmap.app/Contents/MacOS/: heightmap
libs/glfw/examples/particles.app/Contents/MacOS/: particles
libs/glfw/examples/sharing.app/Contents/MacOS/: sharing
libs/glfw/examples/simple.app/Contents/MacOS/: simple
libs/glfw/examples/splitview.app/Contents/MacOS/: splitview
libs/glfw/examples/wave.app/Contents/MacOS/: wave
libs/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
libs/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  glfwinfo  iconify  monitors  msaa  reopen
libs/glfw/tests/empty.app/Contents/MacOS/: empty
libs/glfw/tests/gamma.app/Contents/MacOS/: gamma
libs/glfw/tests/icon.app/Contents/MacOS/: icon
libs/glfw/tests/inputlag.app/Contents/MacOS/: inputlag
libs/nanogui/: .gitignore  cmake_install.cmake
src/: Camera.cpp  Camera.hpp  ExceptionMsg.cpp  ExceptionMsg.hpp  FPS.cpp  FPS.hpp  Force.cpp  Force.hpp  Forces.cpp  Forces.hpp  GUI.cpp  GUI.hpp  OpenCLContext.cpp  OpenCLContext.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Shader.cpp  Shader.hpp  main.cpp
src/kernels/: init_particle.cl  init_particle_cube.cl  init_particle_cube2.cl  init_particle_cube_optimized.cl  init_particle_sphere.cl  init_particle_sphere_optimized.cl  init_particles.cl  particle.h.cl  test.cl  update_particle.cl  update_particle_optimized.cl
src/shaders/: base.vert  particle.frag  particle.vert  skybox.frag  skybox.vert
(+7 files in other folders)
